--- a/style.css
+++ b/style.css
@@ -94,6 +94,44 @@ nav img{
     width: 1em;
 }
 
+.section1{
+  display: flex;
+}
+
+.section2{
+  display: flex;
+}
+
+.section3{
+  display: flex;
+}
+
+.subsection31{
+  background-image: url("images/desktop/image-graphic-design.jpg");
+}
+
+.subsection32{
+  background-image: url("images/desktop/image-photography.jpg");
+  
+}
+
+.clientSection{
+  display: flex;
+  flex-direction: column;
+}
+
+.clients {
+  display: flex;
+}
+
+.imgSection{
+  display: flex;
+}
+
+footer {
+  background-color: hsl(167, 34%, 41%);
+}
+
 @media (max-width: 600px) {
   .top {
     background-image: url('images/mobile/image-header.jpg');
